--- a/src/css/UserProfile.css
+++ b/src/css/UserProfile.css
@@ -68,7 +68,6 @@ header {
 
 #review-list li {
   display: flex;
-  align-items: center;
 }
 #review-list li strong {
   margin: 0 auto -20px auto;
