--- a/src/css/index.css
+++ b/src/css/index.css
@@ -79,6 +79,5 @@ footer {
   background-color: rgb(42, 46, 42);
   bottom: 0;
   position: relative;
-  text-align: center;
   color: #ffffff;
 }
